// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineItemCard with item 0 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Cornell DTI Developer Lead
            </h4>
            <small
              className="avatar__subtitle"
            >
              June 2019
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://www.cornelldti.org"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Cornell DTI Website
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 1 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Facebook SWE Intern"
          loading="lazy"
          src="/timeline/fb-hacker-way.jpg"
          title="Facebook SWE Intern"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Facebook SWE Intern
            </h4>
            <small
              className="avatar__subtitle"
            >
              May 2019
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 2 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Xi++ Compiler
            </h4>
            <small
              className="avatar__subtitle"
            >
              May 2019
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        An optimizing compiler that compiles object-oriented Xi code to x86-64 assembly and Cornell CS 2112 critter language.
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 3 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Website Redesign v3
            </h4>
            <small
              className="avatar__subtitle"
            >
              March 2019
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        This is the current version.
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 4 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Cornell DTI TPM
            </h4>
            <small
              className="avatar__subtitle"
            >
              January 2019
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Technical product manager of the Samwise subteam.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://www.cornelldti.org"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Cornell DTI Website
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 5 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="SAMLANG"
          loading="lazy"
          src="/projects/samlang.png"
          title="SAMLANG"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              SAMLANG
            </h4>
            <small
              className="avatar__subtitle"
            >
              January 2019
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Sam's new programming language with full type-inference.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/samlang"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://samlang.developersam.com/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Docs
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 6 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Facebook SWE Intern Final Interview"
          loading="lazy"
          src="/timeline/fb-sticker-pen.jpg"
          title="Facebook SWE Intern Final Interview"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Facebook SWE Intern Final Interview
            </h4>
            <small
              className="avatar__subtitle"
            >
              October 2018
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 7 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Cornell DTI Software Developer"
          loading="lazy"
          src="/projects/samwise.png"
          title="Cornell DTI Software Developer"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Cornell DTI Software Developer
            </h4>
            <small
              className="avatar__subtitle"
            >
              September 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Frontend Developer of Samwise
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/cornell-dti/samwise"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 8 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Critter Compiler"
          loading="lazy"
          src="/timeline/critter-compiler.png"
          title="Critter Compiler"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Critter Compiler
            </h4>
            <small
              className="avatar__subtitle"
            >
              August 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/primitivize"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://blog.developersam.com/2018/08/27/cw-turing-complete/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Blog Post
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 9 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Badges for GCP Cloud Build
            </h4>
            <small
              className="avatar__subtitle"
            >
              August 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Automatically generating badges for build status on GCP Cloud Build.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/badges-4-gcp-cloud-build"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 10 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Website Redesign v2"
          loading="lazy"
          src="/timeline/website-v2.png"
          title="Website Redesign v2"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Website Redesign v2
            </h4>
            <small
              className="avatar__subtitle"
            >
              July 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/dev-sam-frontend"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://web.archive.org/web/20190102202556/https://developersam.com/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Archive
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 11 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              typed-store
            </h4>
            <small
              className="avatar__subtitle"
            >
              July 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        A type-safe wrapper for Google Cloud Datastore.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/typed-store"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 12 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="SAMPL"
          loading="lazy"
          src="/timeline/sampl.png"
          title="SAMPL"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              SAMPL
            </h4>
            <small
              className="avatar__subtitle"
            >
              June 2018
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Sam's first programming language. Archived in favor of SAMLANG.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/sampl"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://blog.developersam.com/2018/06/15/sampl-alpha-design-choices/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Blog Post
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 13 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              ULearn Educational Group SWE Intern
            </h4>
            <small
              className="avatar__subtitle"
            >
              May 2018
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 14 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="CS 2112 Critter World"
          loading="lazy"
          src="/timeline/critter-world.png"
          title="CS 2112 Critter World"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              CS 2112 Critter World
            </h4>
            <small
              className="avatar__subtitle"
            >
              December 2017
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Sam's critter world implementation. Used as course staff reference solution in Fall 2018 and Fall 2019.
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 15 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="First winning hackathon"
          loading="lazy"
          src="/timeline/chunk-reader.jpg"
          title="First winning hackathon"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              First winning hackathon
            </h4>
            <small
              className="avatar__subtitle"
            >
              September 2017
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Developed a text analysis app during Cornell BigRedHack. Best use of Google Cloud.
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/chunk-reader"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://devpost.com/software/chunk-reader"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              DevPost Link
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 16 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Entered Cornell University
            </h4>
            <small
              className="avatar__subtitle"
            >
              August 2017
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 17 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="TEN"
          loading="lazy"
          src="/projects/ten.png"
          title="TEN"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              TEN
            </h4>
            <small
              className="avatar__subtitle"
            >
              July 2017
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/ten"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 18 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Graduated from WFLA
            </h4>
            <small
              className="avatar__subtitle"
            >
              June 2016
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://blog.developersam.com/2018/12/31/cs-in-high-schools/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Blog: CS in High Schools
            </a>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 19 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="Computerization Club President"
          loading="lazy"
          src="/timeline/sam-later.png"
          title="Computerization Club President"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Computerization Club President
            </h4>
            <small
              className="avatar__subtitle"
            >
              September 2015
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 20 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__image"
      >
        <img
          alt="SAM First Release"
          loading="lazy"
          src="/timeline/sam-first.png"
          title="SAM First Release"
        />
      </div>
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              SAM First Release
            </h4>
            <small
              className="avatar__subtitle"
            >
              April 2015
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/SamChou19815/SAM"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              GitHub Repo
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 21 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Computerization Software Developer
            </h4>
            <small
              className="avatar__subtitle"
            >
              Feburary 2015
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 22 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Bought developersam.com
            </h4>
            <small
              className="avatar__subtitle"
            >
              Feburary 2015
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        Check how it looks initially!
      </div>
      <div
        className="card__footer"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://web.archive.org/web/20160506203739/http://www.developersam.com/"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              Initial Version
            </a>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 23 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Entered WFLA
            </h4>
            <small
              className="avatar__subtitle"
            >
              August 2014
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 24 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Graduated from Huayu Middle School
            </h4>
            <small
              className="avatar__subtitle"
            >
              June 2014
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 25 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              First Non-trivial VB Program Written
            </h4>
            <small
              className="avatar__subtitle"
            >
              December 2011
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 26 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Started Coding
            </h4>
            <small
              className="avatar__subtitle"
            >
              July 2011
            </small>
          </div>
        </div>
      </div>
      <div
        className="card__body"
      >
        I bought a bad C++ intro book and almost gave up.
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 27 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Entered Huayu Middle School
            </h4>
            <small
              className="avatar__subtitle"
            >
              September 2010
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimelineItemCard with item 28 matches snapshot. 1`] = `
<div
  className="CardContainer"
>
  <div
    className="ContentWrapper"
  >
    <span
      className="ConnectorDot"
    />
    <div
      className="card Card"
    >
      <div
        className="card__header"
      >
        <div
          className="avatar"
        >
          <div
            className="avatar__intro"
          >
            <h4
              className="avatar__name"
            >
              Born
            </h4>
            <small
              className="avatar__subtitle"
            >
              November 1998
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
